<resources>
    <string name="app_name">CallGate</string>
    <string name="app_version_build">App version (build)</string>
    <string name="credentials">Credentials</string>
    <string name="information">Information</string>
    <string name="is_not_a_valid_port_must_be_between_1024_and_65535">%1$s is not a valid port. Must be between 1024 and 65535</string>
    <string name="local_server_notifications">Local server notifications</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="password">Password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="port">Port</string>
    <string name="restart_required_to_apply_changes">Restart required to apply changes</string>
    <string name="sending_webhook">Sending webhook…</string>
    <string name="server">Server</string>
    <string name="server_is_running_on_port_d">Server is running on port %d</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="username_must_be_at_least_3_characters">Username must be at least 3 characters</string>
    <string name="call_gate_notifications">Call Gate Notifications</string>

    <string name="address_is">%1$s</string>
    <string name="api_url">API URL</string>
    <string name="api_url_private_token_credentials_etc">API URL, private token, credentials, etc.</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="battery_optimization_already_disabled">Battery optimization already disabled</string>
    <string name="battery_optimization_is_not_supported_on_this_device">Battery optimization is not supported on this device</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="by_code">By Code</string>
    <string name="can_affect_battery_life">can affect battery life</string>
    <string name="click_continue_to_create_an_account_no_personal_information_is_required_nby_continuing_you_agree_to_our_privacy_policy_at_https_docs_sms_gate_app_privacy_policy">Click Continue to create an account. No personal information is required.\nBy continuing, you agree to our Privacy Policy at https://docs.sms-gate.app/privacy/policy/</string>
    <string name="cloud_server">Cloud server</string>
    <string name="cloud_server_dotdotdot">Cloud server…</string>
    <string name="copied_to_clipboard">Copied</string>
    <string name="delays_limits_etc">Delays, limits, etc.</string>
    <string name="delays_seconds">Delays, seconds</string>
    <string name="delete_after_days">Delete after, days</string>
    <string name="disabled">Disabled</string>
    <string name="dots">…</string>
    <string name="enabled">Enabled</string>
    <string name="encryption">Encryption</string>
    <string name="failed_to_change_password">Failed to change password: %1$s</string>
    <string name="failed_to_get_login_code">Failed to get login code: %1$s</string>
    <string name="failed_to_register_device">Failed to register device: %1$s</string>
    <string name="if_sim_number_is_not_specified_use">If SIM number is not specified, use</string>
    <string name="ignored_for_public_server">Ignored for public server</string>
    <string name="internet_connection_available">Internet connection: available</string>
    <string name="internet_connection_unavailable">Internet connection: unavailable</string>
    <string name="interval_seconds">Interval (seconds)</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="label_password">Password:</string>
    <string name="label_username">Username:</string>
    <string name="limits">Limits</string>
    <string name="list_of_last_50_log_entries">List of last 50 log entries</string>
    <string name="local_address">Local address:</string>
    <string name="local_server_dotdotdot">Local Server…</string>
    <string name="local_sms_gateway_notifications">Local SMS Gateway notifications</string>
    <string name="login_code">Login Code</string>
    <string name="login_code_expires">Login Code, expires %1$s</string>
    <string name="logs">Logs</string>
    <string name="maximum">Maximum</string>
    <string name="messages">Messages…</string>
    <string name="messages_count">Messages count</string>
    <string name="messages_header">Messages</string>
    <string name="minimum">Minimum</string>
    <string name="more_settings">More settings…</string>
    <string name="n_a">n/a</string>
    <string name="not_registered">not registered</string>
    <string name="not_set">Not set</string>
    <string name="notification_title">SMS Gateway</string>
    <string name="online_status_at_the_cost_of_battery_life">Online status at the cost of battery life</string>
    <string name="passphrase">Passphrase</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="password_must_be_at_least_14_characters">Password must be at least 14 characters</string>
    <string name="period">Period</string>
    <string name="ping">Ping</string>
    <string name="ping_service_is_active">Ping service is active</string>
    <string name="please_enter_one_time_code_displayed_on_already_registered_device">Please enter one-time code displayed on already registered device</string>
    <string name="port_credentials_etc">Port, credentials, etc.</string>
    <string name="private_token">Private Token</string>
    <string name="public_address">Public address:</string>
    <string name="require_internet_connection">Require Internet connection</string>
    <string name="retries_signing_etc">Retries, signing, etc.</string>
    <string name="retry_count">Retry count</string>
    <string name="send_messages_notification">Sending messages…</string>
    <string name="server_address">Server address:</string>
    <string name="set_maximum_value_to_activate">Set maximum value to activate</string>
    <string name="settings_address_is_sms_capcom_me">api.sms-gate.app</string>
    <string name="settings_local_address_is">&lt;a href>%1$s:%2$d&lt;/a></string>
    <string name="settings_local_address_not_found">Not available</string>
    <string name="settings_local_server">Local server</string>
    <string name="settings_offline">Offline</string>
    <string name="settings_online">Online</string>
    <string name="settings_public_address_is">&lt;a href>%1$s:%2$d&lt;/a></string>
    <string name="settings_public_address_not_found">Not available</string>
    <string name="settings_start_on_boot">Start on boot</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signing_key">Signing Key</string>
    <string name="sms_gateway">SMS Gateway</string>
    <string name="sms_gateway_is_running_on_port">SMS gateway is running on port %1$d</string>
    <string name="success_long_press_to_copy">Success, long press to copy</string>
    <string name="system">System</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_messages">MESSAGES</string>
    <string name="tab_text_settings">SETTINGS</string>
    <string name="the_webhook_request_will_wait_for_an_internet_connection">The webhook request will wait for an internet connection</string>
    <string name="to_add_a_device_to_an_existing_account_please_fill_in_the_credentials_below">To add a device to an existing account, please fill in the credentials below.</string>
    <string name="to_apply_the_changes_restart_the_app_using_the_button_below">To apply the changes, restart the app using the button below.</string>
    <string name="use_empty_to_disable">Use empty to disable</string>
    <string name="use_this_code_to_sign_in_on_another_device">Use this code to sign in on another device</string>
    <string name="view">View</string>
    <string name="webhooks">Webhooks</string>
    <string name="webhooks_dotdotdot">Webhooks…</string>
    <string name="server_dotdotdot">Server…</string>
    <string name="general">General</string>
    <string name="autostart">Autostart</string>
</resources>