<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/server">
        <EditTextPreference
            app:defaultValue="8084"
            app:icon="@drawable/ic_server"
            app:key="server.port"
            app:title="@string/port"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/credentials">
        <EditTextPreference
            app:enableCopying="true"
            app:icon="@drawable/ic_username"
            app:key="server.username"
            app:title="@string/username"
            app:defaultValue="call"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:enableCopying="true"
            app:icon="@drawable/ic_password"
            app:key="server.password"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <Preference app:summary="@string/restart_required_to_apply_changes" />
</androidx.preference.PreferenceScreen>